--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  box-sizing: border-box;
+}
+.fade-in {
+  animation: fade-in 0.3s linear forwards;
+}
+
+.fade-in form {
+  animation: scale-up 0.3s ease-out 0.2s forwards;
+}
+.fade-in .bookmark {
+  animation: scale-up 0.3s ease-out 0.2s forwards;
+}
+
+dialog.folder.fade-out {
+  animation: fade-out 0.3s linear forwards;
+}
+form.fade-out,
+div.fade-out {
+  animation: scale-out 0.3s ease-out forwards;
+  transform-origin: 0% 0%;
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
+@keyframes scale-up {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes scale-out {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0);
+  }
+}
